refactor(nodes): 优化节点代码实现
- 将索引访问替换为更安全的getFirst()方法获取列表首元素
- 使用增强for循环替代传统索引循环提高代码可读性
- 添加空值检查避免潜在的NullPointerException
- 采用模式匹配简化类型转换和条件判断
- 优化布尔表达式逻辑提高代码简洁性